switch to gradle

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,13 +15,13 @@ jobs:
       - checkout
       - restore_cache:
           keys:
-          - v1-dependencies-{{ checksum "build.sbt" }}
+          - v1-dependencies-{{ checksum "build.gradle" }}
           # fallback to using the latest cache if no exact match is found
           - v1-dependencies-
-      - run: cat /dev/null | sbt test:compile
+      - run: cat /dev/null | ./gradlew test
       - save_cache:
           paths:
             - ~/.m2
-          key: v1-dependencies--{{ checksum "build.sbt" }}
+          key: v1-dependencies--{{ checksum "build.gradle" }}
       # run tests!
-      - run: cat /dev/null | sbt test:test
+      - run: cat /dev/null |./gradlew test
