--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,21 +7,6 @@ jobs:
   build:
     docker:
       - image: circleci/openjdk:8-jdk
-    working_directory: ~/repo
-    environment:
-      JVM_OPTS: -Xmx3200m
-      TERM: dumb
     steps:
       - checkout
-      - restore_cache:
-          keys:
-          - v1-dependencies-{{ checksum "build.gradle" }}
-          # fallback to using the latest cache if no exact match is found
-          - v1-dependencies-
-      - run: cat /dev/null | ./gradlew test
-      - save_cache:
-          paths:
-            - ~/.m2
-          key: v1-dependencies--{{ checksum "build.gradle" }}
-      # run tests!
-      - run: cat /dev/null |./gradlew test
+      - run: ./gradlew test
