--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,6 +7,8 @@ jobs:
   build:
     docker:
       - image: circleci/openjdk:8-jdk
+    environment:
+      JAVA_OPTS: "-Xms512m -Xmx1024m"
     steps:
       - checkout
       - run: ./gradlew test --stacktrace 
