--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,7 @@ jobs:
     docker:
       - image: circleci/openjdk:8-jdk
     environment:
-      JAVA_OPTS: "-Xms512m -Xmx1024m"
+      JVM_OPTS: -Xmx3200m
     steps:
       - checkout
       - run: ./gradlew test --stacktrace 
