--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,9 +6,24 @@ version: 2
 jobs:
   build:
     docker:
-      - image: circleci/openjdk:8-jdk
+      - image: circleci/openjdk:8-jre-slim
     environment:
+      # Customize the JVM maximum heap limit
       JVM_OPTS: -Xmx3200m
+      TERM: dumb
     steps:
       - checkout
+      # Download and cache dependencies
+      - restore_cache:
+          keys:
+          - v1-dependencies-{{ checksum "build.gradle" }}
+          # fallback to using the latest cache if no exact match is found
+          - v1-dependencies-
+
+      - run: gradle dependencies
+
+      - save_cache:
+          paths:
+            - ~/.m2
+          key: v1-dependencies-{{ checksum "build.gradle" }}
       - run: ./gradlew test --stacktrace 
