--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,7 @@ version: 2
 jobs:
   build:
     docker:
-      - image: circleci/openjdk:8-jre-slim
+      - image: circleci/openjdk:8-jdk
     environment:
       # Customize the JVM maximum heap limit
       JVM_OPTS: -Xmx3200m
